<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/White"
    tools:context="com.uf.dancemarathon.ContactUsActivity" >
	
    <View 
	    android:id="@+id/cu_divider1"
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="#f6f6f6"/>
    
    <!-- Section 1 -->
    <RelativeLayout 
        android:id="@+id/cu_section1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cu_divider1"
        android:layout_marginTop="@dimen/cu_sectionMarginVertical"
        android:layout_marginBottom="@dimen/cu_sectionMarginVertical">
		
    	<TextView
    	    android:id="@+id/cu_label1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/cu_labelMarginBottom"
	        android:text="@string/cu_label1"
	        android:textColor="@color/dm_blue_primary"
	        android:textSize="18sp"/>
    	<TextView 
    	    android:id="@+id/cu_content1"
    	    android:layout_width= "wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
            android:layout_below="@+id/cu_label1"
            android:gravity="center"
	        android:textSize="@dimen/cu_textStyle_in"
	        android:textColor="@color/dm_orange_secondary"
	        android:text="@string/cu_content1"/>
        
	</RelativeLayout>
	
    <View 
	    android:id="@+id/cu_divider2"
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:layout_below="@+id/cu_section1"
	    android:background="#f6f6f6"/>
	
    <!-- Section 2 -->
    <RelativeLayout 
        android:id="@+id/cu_section2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cu_divider2"
        android:layout_marginTop="@dimen/cu_sectionMarginVertical"
        android:layout_marginBottom="@dimen/cu_sectionMarginVertical" 
        android:weightSum="3">
    	<TextView
    	    android:id="@+id/cu_label2"
            android:layout_width= "wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/cu_labelMarginBottom"
	        android:text="@string/cu_label2"
	        android:textColor="@color/dm_blue_primary"
	        android:textSize="18sp"/>
    	<TextView 
    	    android:id="@+id/cu_content2"
            android:layout_width= "wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/cu_label2"
            android:gravity="center"
	        android:textSize="@dimen/cu_textStyle_in"
	        android:textColor="@color/dm_orange_secondary"
	        android:text="@string/cu_content2"/>
	</RelativeLayout>
	
    <View 
	    android:id="@+id/cu_divider3"
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:layout_below="@+id/cu_section2"
	    android:background="#f6f6f6"/>
 
    <!-- Section 3 -->
    <RelativeLayout 
        android:id="@+id/cu_section3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cu_divider3"
        android:layout_marginTop="@dimen/cu_sectionMarginVertical"
        android:layout_marginBottom="@dimen/cu_sectionMarginVertical">

    	<TextView
    	    android:id="@+id/cu_label3"
            android:layout_width= "wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/cu_labelMarginBottom"
	        android:text="@string/cu_label3"
	        android:textColor="@color/dm_blue_primary"
	        android:textSize="18sp"/>
    	<TextView
            android:id="@+id/cu_content3"
            android:layout_width= "wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/cu_label3"
            android:gravity="center"
            android:textSize="@dimen/cu_textStyle_in"
            android:textColor="@color/dm_orange_secondary"
            android:text="@string/cu_content3"/>

	</RelativeLayout>
	
    <View 
	    android:id="@+id/cu_divider4"
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:layout_below="@+id/cu_section3"
	    android:background="#f6f6f6"/>
    
    
    <!-- Section 4 -->
    <RelativeLayout 
        android:id="@+id/cu_section4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cu_divider4"
        android:layout_marginTop="@dimen/cu_sectionMarginVertical"
        android:layout_marginBottom="@dimen/cu_sectionMarginVertical">

    	<TextView
    	    android:id="@+id/cu_label4"
            android:layout_width= "wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/cu_labelMarginBottom"
	        android:text="@string/cu_label4"
	        android:textColor="@color/dm_blue_primary"
	        android:textSize="18sp"/>
    	<TextView 
    	    android:id="@+id/cu_content4"
            android:layout_width= "wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/cu_label4"
            android:gravity="center"
	        android:textSize="@dimen/cu_textStyle_in"
	        android:textColor="@color/dm_orange_secondary"
	        android:text="@string/cu_content4"/>
	</RelativeLayout>
	
    <View 
	    android:id="@+id/cu_divider5"
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:layout_below="@+id/cu_section4"
	    android:background="#f6f6f6"/>
</RelativeLayout>
