<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/White"
    tools:context="com.uf.dancemarathon.EventFragment" >

    <!-- Event page title -->
    <TextView
        android:id="@+id/event_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="@color/dm_blue_primary"
        android:gravity="center" 
        android:text=""/>
    
    <!-- Event page description -->
    <TextView
        android:id="@+id/event_page_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/event_page_title"
        android:layout_marginTop="25dp"
        android:textSize="20sp"
        android:textColor="@color/Black"
        android:text=""/>
    
     <!-- Event page start time label -->

	 <TextView
	     android:id="@+id/event_page_stime_label"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:layout_below="@+id/event_page_desc"
	     android:layout_marginTop="40dp"
         android:layout_marginRight="5dp"
	     android:text="@string/start_time_label"
	     android:textSize="22sp"
	     android:textColor="@color/dm_orange_secondary" />
	 
	 <!-- Event page start time-->
	 <TextView
        android:id="@+id/event_page_stime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_toRightOf="@+id/event_page_stime_label"
        android:layout_toEndOf="@+id/event_page_stime_label"
        android:layout_alignTop="@+id/event_page_stime_label"
        android:textSize="22sp"
        android:text=""
        android:textColor="@color/Black"/>
	 
	 <!-- Event page end time label -->
	 <TextView
        android:id="@+id/event_page_etime_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/event_page_stime_label"
        android:layout_alignLeft="@+id/event_page_stime_label"
        android:layout_alignStart="@+id/event_page_stime_label"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:textSize="22sp"
        android:text="@string/end_time_label"
        android:textColor="@color/dm_orange_secondary"/>
	 
	 <!-- Event page end time -->
	 <TextView
        android:id="@+id/event_page_etime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_toRightOf="@+id/event_page_etime_label"
        android:layout_toEndOf="@+id/event_page_etime_label"
        android:layout_alignTop="@+id/event_page_etime_label"
        android:textSize="22sp"
        android:text=""
        android:textColor="@color/Black"/>
	 
	 <!-- Event page location label-->
	 <TextView
        android:id="@+id/event_page_loc_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/event_page_etime_label"
        android:layout_alignLeft="@+id/event_page_stime_label"
        android:layout_alignStart="@+id/event_page_stime_label"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:textSize="22sp"
        android:text="@string/location_label"
        android:textColor="@color/dm_orange_secondary" />
	 
	 <!-- Event page location -->
	 <TextView
        android:id="@+id/event_page_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/event_page_loc_label" 
        android:layout_toEndOf="@+id/event_page_loc_label"
        android:layout_alignTop="@+id/event_page_loc_label"
        android:textSize="22sp"
        android:text=""
        android:textColor="@color/Black"/>
	 
	 <!-- Add to Calendar -->
	 <Button
	     android:id="@+id/addToCalendar_button"
	     android:layout_width="wrap_content"
       	 android:layout_height="wrap_content"
       	 android:layout_marginTop="60dp"
       	 android:layout_below="@+id/event_page_loc"
       	 android:layout_centerHorizontal="true"
       	 android:paddingLeft="10dp"
       	 android:paddingRight="10dp"
       	 android:textSize="18sp"
       	 android:textColor="@color/White"
       	 android:text="@string/addToCal_buttontext"
       	 android:background="@drawable/blue_rounded_button"/> 
	 
</RelativeLayout>
